2022-07-09 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Refactor code to scan file system
	* Use signal-safe write function in signal handler (closes: #100)
	* Fix error messsage on invalid rule prefix

2022-07-02 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Fix SIGBUS handling
	* Fix segfault in close_md function

2022-06-28 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Fork child for hash calculation (closes: #124)

2022-06-17 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Adjust some log messages
	* Update aide.conf.5 manual page
	* Fix compiler warnings and clean up code
	* Improve error message for unknown config options

2022-06-16 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Add prefix option to directory include macros (closes: #112)

2022-06-15 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Add `report_format` option (closes: #18)
	  - available formats: `plain`, `json`

2022-04-18 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Fix memory leak on errors during hash calculation (closes: #125)

2022-02-20 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Fix handling of duplicate database entries (closes: #122)

2022-02-13 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Fix compiler warnings and clean up code

2022-02-12 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Clean up #include statements

2022-01-19 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Precalculate buffer size in base64 functions (CVE-2021-45417),
	  thanks to David Bouman for reporting this issue

2022-01-18 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Handle malformed database lines (closes: #122)
	* Always add size attribute to database if growing size group
	  is set (closes: #121)

2021-12-31 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Improve error message during config parsing (closes: #119)

2021-12-05 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Add 'database_in' examples to manual page (closes: #31)