@@ -1,3 +1,6 @@
+2022-07-10 Hannes von Haugwitz <hannes@vonhaugwitz.com>
+	* Change log level for some deprecations
+
 2022-07-09 Hannes von Haugwitz <hannes@vonhaugwitz.com>
 	* Refactor code to scan file system
 	* Use signal-safe write function in signal handler (closes: #100)
